--- a/index.html
+++ b/index.html
@@ -46,20 +46,68 @@
         </div>
       </section>
       <div id="works"></div>
-      <section class="spotlight parallax bg-cover bg-size--cover" data-spotlight="fullscreen" style="background-image: url('assets/images/backgrounds/02.png');background-size:100% 100%;">
-        <div class="spotlight-holder py-lg pt-lg-xl">
+
+      <div class="row-wrapper">
+        <div class="row cols-xs-space cols-sm-space cols-md-space">
+          <div class="row" style="margin-left: 10px; margin-right: 10px;">
+            <div class="col-lg-12" style="margin-top: 1%">
+              <div style="margin-left: 1.5%;"><img class="img-responsive"  style="width:20%;height:20%;" src="./assets/images/logo-2.png" ></div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-1.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-2.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-3.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-4.png" onclick="showMaxImg(this)"></div>
+          </div>
+          <div class="row" style="margin-left: 10px; margin-right: 10px; margin-top: 8px;">
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-5.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-6.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-7.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-8.png" onclick="showMaxImg(this)"></div>
+          </div>
         </div>
-      </section>
+      </div>
+
+      <div class="row-wrapper">
+        <div class="row cols-xs-space cols-sm-space cols-md-space">
+          <div class="row" style="margin-left: 10px; margin-right: 10px;">
+            <div class="col-lg-12" style="margin-top: 1%">
+              <div style="margin-left: 1.5%;"><img class="img-responsive"  style="width:20%;height:20%;" src="./assets/images/logo-2.png" ></div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-1.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-2.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-3.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-4.png" onclick="showMaxImg(this)"></div>
+          </div>
+          <div class="row" style="margin-left: 10px; margin-right: 10px; margin-top: 8px;">
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-5.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-6.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-7.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/3-8.png" onclick="showMaxImg(this)"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row-wrapper">
+        <div class="row cols-xs-space cols-sm-space cols-md-space">
+          <div class="row" style="margin-left: 10px; margin-right: 10px;">
+            <div class="col-lg-12" style="margin-top: 1%">
+              <div style="margin-left: 1.5%;"><img class="img-responsive"  style="width:20%;height:20%;" src="./assets/images/logo-2.png" ></div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-1.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-2.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-3.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-4.png" onclick="showMaxImg(this)"></div>
+          </div>
+          <div class="row" style="margin-left: 10px; margin-right: 10px; margin-top: 8px;">
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-5.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-6.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-7.png" onclick="showMaxImg(this)"></div>
+            <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/4-8.png" onclick="showMaxImg(this)"></div>
+          </div>
+        </div>
+      </div>
     
-      <section class="spotlight parallax bg-cover bg-size--cover" data-spotlight="fullscreen" style="background-image: url('assets/images/backgrounds/03.png');background-size:100% 100%;">
-        <div class="spotlight-holder py-lg pt-lg-xl">
-        </div>
-      </section>
      
-      <section class="spotlight parallax bg-cover bg-size--cover" data-spotlight="fullscreen" style="background-image: url('assets/images/backgrounds/04.png');background-size:100% 100%;">
-        <div class="spotlight-holder py-lg pt-lg-xl">
-        </div>
-      </section>
 
       <div style="margin-top: 8px;" id="about"></div>
   
@@ -145,6 +193,8 @@
         </div>
       </section>
 
+      <div class="modal fade bs-example-modal-lg text-center" id="imgModal" tabindex="-1" role="dialog" data-toggle="modal" aria-labelledby="myLargeModalLabel" aria-hidden="true"><div class="modal-dialog modal-lg" style="display:inline-block;width:auto;"><div class="modal-content"><div id="imgshow"></div></div></div></div>
+
     </main>
     <!-- Core -->
     <script src="./assets/vendor/jquery/jquery.min.js"></script>
@@ -191,6 +241,10 @@
           message => alert(message)
         );
       }
+
+      function showMaxImg(obj){var src=$(obj).attr("src");$("#imgModal").find("#imgshow").html("<img src='"+src+"' class='carousel-inner img-responsive img-rounded' data-dismiss='modal'>");
+$("#imgModal").modal('show');
+}
     </script>
   </body>
 </html>
