--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="container" style="margin-top: 15%px;">
+            <div class="container" style="margin-top: 15%;">
               <div class="row cols-xs-space cols-sm-space cols-md-space">
                 <div class="col-12">
-                  <div class="row mt-4">
+                  <div class="row mt-10">
                     <div class="col-lg-10">
                      
                       <div class="mt-5">                         
-                        <span style="font-size: 12px;font-weight: 400; color: rgba(113, 112, 112, 1);">
-                          不谈鸡汤不说愿景，只划 <span style="font-size: 12px;font-weight: 700;letter-spacing: 0.6px;line-height: 26.06px;text-decoration:underline;">招聘重点:</span>
+                        <span style="font-size: 18px;font-weight: 400; color: rgba(113, 112, 112, 1);">
+                          不谈鸡汤不说愿景，只划 <span style="font-size: 18px;font-weight: 700;letter-spacing: 0.6px;line-height: 26.06px;text-decoration:underline;">招聘重点:</span>
                         </span>
                       </div> 
                       <div class="mt-3">  
@@ -247,29 +247,29 @@
                         </span>
                       </div>    
                       <div class="mt-3">  
-                        <span style="font-size: 12px;color: rgba(113, 112, 112, 1);font-weight: 700;">
+                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 700;">
                           总结:每月每季每年，努力都有回报(认真搞钱，月月分钱)
                         </span>
                       </div>
                       <div>  
-                        <span style="font-size: 12px;color: rgba(113, 112, 112, 1);font-weight: 500;">
+                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 500;">
                           公司氛围轻松，老板爱发红包，创意总监爱请下午茶，客户总监爱传道解惑
                         </span>
                       </div>   
                       <div class="mt-3">  
                         <span style="font-size: 12px;color: rgba(113, 112, 112, 1);">
-                          -----------------------------------
+                          -------------------------------------------------
                         </span>
                       </div>
                       
                       <div class="mt-3">  
-                        <span style="font-size: 12px;color: rgba(113, 112, 112, 1);font-weight: 500;">
+                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 500;">
                           您可把简历发送至：
                         </span>
                       </div>     
 
                       <div>  
-                        <span style="font-size: 22px;color: rgba(113, 112, 112, 1);font-weight: 700;">
+                        <span style="font-size: 28px;color: rgba(113, 112, 112, 1);font-weight: 700;">
                           fangfang.ma@shining-ad.net
                         </span>
                       </div>     
