--- a/join.html
+++ b/join.html
@@ -46,7 +46,7 @@
       <div class="row-wrapper">
         <div class="row cols-xs-space cols-sm-space cols-md-space"  data-spotlight="fullscreen">
           <div class="col-lg-6">
-            <div style="margin-left: 5%;"><img class="img-responsive" style="width:30%;height:30%;" src="./assets/images/logo.png" ></div>
+            <div style="margin-left: 5%;margin-top: 2%"><img class="img-responsive" style="width:30%;height:30%;" src="./assets/images/logo.png" ></div>
             <div class="container text-center" style="margin-top: 25%;">
               <div class="row cols-xs-space cols-sm-space cols-md-space">
                 <div class="col-12">
