--- a/works.html
+++ b/works.html
@@ -152,7 +152,7 @@
         );
       }
 
-      function showMaxImg(obj){var src=$(obj).attr("src");$("#imgModal").find("#imgshow").html("<img src='"+src+"' class='carousel-inner img-responsive img-rounded' data-dismiss='modal'>");
+      function showMaxImg(obj){var src=$(obj).attr("src");$("#imgModal").find("#imgshow").html("<img src='"+src+"' class='carousel-inner img-responsive img-rounded'  style='width:100%;' data-dismiss='modal'>");
 $("#imgModal").modal('show');
 }
     </script>
