--- a/home.html
+++ b/home.html
@@ -35,18 +35,16 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" style="font-size: 16px; color:antiquewhite">中文 | English</a>
+              <a class="nav-link active" style="font-size: 16px; color:antiquewhite">中文 | English</a>
             </li>
           </ul>
         </div>
     </nav>
     <main class="main">
-      <section class="spotlight parallax bg-cover bg-size--cover" data-spotlight="fullscreen" style="background-image: url('assets/images/backgrounds/01.png');background-size:100% 100%;">
-        <div class="spotlight-holder py-lg pt-lg-xl">
-        </div>
-      </section>
-      <div id="works"></div>
-      <div class="modal fade bs-example-modal-lg text-center" id="imgModal" tabindex="-1" role="dialog" data-toggle="modal" aria-labelledby="myLargeModalLabel" aria-hidden="true"><div class="modal-dialog modal-lg" style="display:inline-block;width:auto;"><div class="modal-content"><div id="imgshow"></div></div></div></div>
+      <div class="row-wrapper" data-spotlight="fullscreen">
+        <div class="d-none d-md-block"><img class="img-responsive"  style="width:100%;height:100%;" src="./assets/images/backgrounds/01.png" ></div>
+        <div class="d-md-none"><img class="img-responsive"  style="width:100%;height:100%;" src="./assets/images/backgrounds/02.png" ></div>
+      </div>
 
     </main>
     <!-- Core -->
