--- a/join.html
+++ b/join.html
@@ -27,11 +27,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" style="font-size: 16px; color:#151514" id="guanyu"  href="./about.html">关于我们</a>
+              <a class="nav-link" style="font-size: 16px; color:#151514;" id="guanyu"  href="./about.html">关于我们</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" style="font-size: 16px; color:#151514" id="jiaru">加入我们</a>
+              <a class="nav-link" style="font-size: 16px; color:#151514;background-color: #e9ecef" id="jiaru">加入我们</a>
             </li>
 
             <li class="nav-item">
@@ -60,54 +60,54 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="container" style="margin-top: 15%;">
+            <div class="container" style="margin-top: 20%;">
               <div class="row cols-xs-space cols-sm-space cols-md-space">
                 <div class="col-12">
                   <div class="row mt-10">
                     <div class="col-lg-12">
                      
                       <div class="mt-5">                         
-                        <span style="font-size: 18px;font-weight: 400; color: rgba(113, 112, 112, 1);">
-                          不谈鸡汤不说愿景，只划 <span style="font-size: 18px;font-weight: 700;letter-spacing: 0.6px;line-height: 26.06px;text-decoration:underline;">招聘重点:</span>
+                        <span style="font-size: 18px;font-weight: 400; color: rgba(113, 112, 112, 1);font-family:思源黑体;">
+                          不谈鸡汤不说愿景，只划 <span style="font-size: 18px;font-weight: 400;letter-spacing: 0.6px;line-height: 26.06px;text-decoration:underline;font-family:思源黑体;">招聘重点:</span>
                         </span>
                       </div> 
                       <div class="mt-3">  
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);font-family:思源黑体;">
                           1.年终
                         </span>
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(230, 8, 80, 1)">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(230, 8, 80, 1);font-family:思源黑体;">
                           13薪
                         </span>
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);font-family:思源黑体;">
                           起
                         </span>
                       </div>
                       <div class="mt-1">  
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);font-family:思源黑体;">
                           2.一年
                         </span>
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(230, 8, 80, 1)">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(230, 8, 80, 1);font-family:思源黑体;">
                           两次调薪
                         </span>
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);font-family:思源黑体;">
                           机会
                         </span>
                       </div>  
                       <div class="mt-1">  
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(113, 112, 112, 1);font-family:思源黑体;">
                           3.完成目标，每季度有
                         </span>
-                        <span style="font-size: 28px;font-weight: 700;color: rgba(230, 8, 80, 1)">
+                        <span style="font-size: 28px;font-weight: 700;color: rgba(230, 8, 80, 1);font-family:思源黑体;">
                           奖金
                         </span>
                       </div>    
                       <div class="mt-3">  
-                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 700;">
+                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 700;font-family:思源黑体;">
                           总结:每月每季每年，努力都有回报(认真搞钱，月月分钱)
                         </span>
                       </div>
                       <div>  
-                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 500;">
+                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 500;font-family:思源黑体;">
                           公司氛围轻松，老板爱发红包，创意总监爱请下午茶，客户总监爱传道解惑
                         </span>
                       </div>   
@@ -118,13 +118,13 @@
                       </div>
                       
                       <div class="mt-3">  
-                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 500;">
+                        <span style="font-size: 18px;color: rgba(113, 112, 112, 1);font-weight: 500;font-family:思源黑体;">
                           您可把简历发送至：
                         </span>
                       </div>     
 
                       <div>  
-                        <span style="font-size: 28px;color: rgba(113, 112, 112, 1);font-weight: 700;">
+                        <span style="font-size: 28px;color: rgba(113, 112, 112, 1);font-weight: 700;font-family:思源黑体;">
                           fangfang.ma@shining-ad.net
                         </span>
                       </div>     
