--- a/works.html
+++ b/works.html
@@ -23,7 +23,7 @@
             <h6 class="dropdown-header font-weight-600 d-lg-none px-0">Menu</h6>
           
             <li class="nav-item">
-              <a class="nav-link" style="font-size: 16px; color:#151514" id = "zuopin">作品</a>
+              <a class="nav-link active" style="font-size: 16px; color:#151514;background-color: #e9ecef" id = "zuopin">作品</a>
             </li>
 
             <li class="nav-item">
@@ -42,10 +42,10 @@
     </nav>
     <main class="main">
      
-      <div class="row-wrapper" data-spotlight="fullscreen">
+      <div class="row-wrapper">
         <div class="row cols-xs-space cols-sm-space cols-md-space">
           <div class="row" style="margin-left: 1.5%; margin-right: 1%;">
-            <div class="col-lg-12" style="margin-top: 1%">
+            <div class="col-lg-12" style="margin-top: 1%;margin-bottom: 1%;">
               <div style="margin-left: 1.5%;"><img class="img-responsive"  style="width:20%;height:20%;" src="./assets/images/logo-2.png" ></div>
             </div>
             <div class="col-lg-3 col-md-6" style="padding-left: 0px; padding-right: 8px;"><img class="img-responsive"   style="width:100%;" src="./assets/images/2-1.png" onclick="showMaxImg(this)"></div>
